# godot-cpp

./: .gitignore  CMakeLists.txt  binding_generator.py
.github/workflows/: ci-cmake.yml  ci-scons.yml  ci.yml  linux-ci.yml  runner.yml  windows-ci.yml
cmake/: GodotCPPModule.cmake  android.cmake  common_compiler_flags.cmake  emsdkHack.cmake  genex_debug.cmake  godotcpp.cmake  ios.cmake  linux.cmake  macos.cmake  sources.cmake  web.cmake  windows.cmake
doc/: cmake.md
test/: CMakeLists.txt  run-tests.ps1  run-tests.py  run-tests.sh
tools/: godotcpp.py  windows.py
